--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "email": "ivan.g.ortolan@gmail.com"
   },
   "contributors": [],
-  "main": "dist/index.js",
+  "main": "dist/index",
   "repository": {
     "type": "git",
     "url": "https://github.com/ntrp/nativescript-meteor-client.git"
   },
   "scripts": {},
   "dependencies": {
+    "babel-runtime": "^6.20.0",
     "nativescript-websockets": "^1.3.0"
   },
   "devDependencies": {
