--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "type": "git",
     "url": "https://github.com/ntrp/nativescript-meteor-client.git"
   },
-  "scripts": {},
+  "scripts": {
+    "build": "sh meteor/build.sh && node scripts/copy.js"
+  },
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "nativescript-websockets": "^1.3.0"
