--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "name": "Ivan Greguric Ortolan",
     "email": "ivan.g.ortolan@gmail.com"
   },
-  "contributors": [],
-  "main": "dist/index",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/ntrp/nativescript-meteor-client.git"
