--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-meteor-client",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Nativescript module enabling the use of the Meteor",
   "keywords": [
     "NativeScript",
@@ -26,11 +26,11 @@
     "url": "https://github.com/ntrp/nativescript-meteor-client.git"
   },
   "scripts": {
-    "build": "sh meteor/build.sh && node scripts/copy.js"
+    "build": "node scripts/copy.js"
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
-    "nativescript-websockets": "^1.3.0"
+    "nativescript-websockets": "^1.3.3"
   },
   "devDependencies": {
     "shelljs": "^0.7.5",
